--- a/Breakout.html
+++ b/Breakout.html
@@ -11,7 +11,18 @@
 	<body>
 		<canvas id="myCanvas" width="400" height="320"></canvas>
 		<script>
-		
+			// canvas要素への参照
+			var canvas = document.getElementById("myCanvas");
+			// 2D描画コンテキストを保存する変数
+			var ctx = canvas.getContext("2d");
+			
+			ctx.beginPath();
+			// rectで四角形のオブジェクトを生成
+			// 左上：20, 上端から40のところに幅50、高さ50の大きさを生成
+			ctx.rect(20, 40, 50, 50);
+			ctx.fillStyle = "#FF0000";
+			ctx.fill();
+			ctx.closePath();
 		</script>
 	</body>
 </html>
