--- a/Breakout.html
+++ b/Breakout.html
@@ -22,6 +22,7 @@
 			var dy = -2;
 			
 			function draw() {
+				ctx.clearRect(0, 0, canvas.width, canvas.height);
 				ctx.beginPath();
 				ctx.arc(ball_x, ball_y, 10, 0, Math.PI*2);
 				ctx.fillStyle = "#0095DD";
