--- a/Breakout.html
+++ b/Breakout.html
@@ -21,13 +21,17 @@
 			var dx = 2;
 			var dy = -2;
 			
-			function draw() {
-				ctx.clearRect(0, 0, canvas.width, canvas.height);
+			function drawBall() {
 				ctx.beginPath();
 				ctx.arc(ball_x, ball_y, 10, 0, Math.PI*2);
 				ctx.fillStyle = "#0095DD";
 				ctx.fill();
 				ctx.closePath();
+			}
+			
+			function draw() {
+				ctx.clearRect(0, 0, canvas.width, canvas.height);
+				drawBall();
 				ball_x += dx;
 				ball_y += dy;
 			}
