--- a/Breakout.html
+++ b/Breakout.html
@@ -20,10 +20,11 @@
 			var ball_y = canvas.height - 30;
 			var dx = 2;
 			var dy = -2;
+			var ballRadius = 10;
 			
 			function drawBall() {
 				ctx.beginPath();
-				ctx.arc(ball_x, ball_y, 10, 0, Math.PI*2);
+				ctx.arc(ball_x, ball_y, ballRadius, 0, Math.PI*2);
 				ctx.fillStyle = "#0095DD";
 				ctx.fill();
 				ctx.closePath();
@@ -32,6 +33,12 @@
 			function draw() {
 				ctx.clearRect(0, 0, canvas.width, canvas.height);
 				drawBall();
+				if (ball_y + dy < ballRadius || ball_y + dy > canvas.height - ballRadius) {
+					dy = -dy;
+				}
+				if (ball_x + dx < ballRadius || ball_x + dx > canvas.width - ballRadius) {
+					dx = -dx
+				}
 				ball_x += dx;
 				ball_y += dy;
 			}
