--- a/Breakout.html
+++ b/Breakout.html
@@ -16,11 +16,29 @@
 			// 2D描画コンテキストを保存する変数
 			var ctx = canvas.getContext("2d");
 
+			//=========================================
+			// Ball Definition
+			//=========================================
 			var ball_x = canvas.width / 2;
 			var ball_y = canvas.height - 30;
 			var dx = 2;
 			var dy = -2;
 			var ballRadius = 10;
+			
+			//=========================================
+			// Paddle Definition
+			//=========================================
+			var paddleHeight = 10;
+			var paddleWidth = 75;
+			var paddleX = (canvas.width - paddleWidth) / 2;
+
+			function drawPaddle() {
+				ctx.beginPath();
+				ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
+				ctx.fillStyle = "#0095DD"
+				ctx.fill();
+				ctx.closePath();
+			}
 			
 			function drawBall() {
 				ctx.beginPath();
@@ -33,6 +51,7 @@
 			function draw() {
 				ctx.clearRect(0, 0, canvas.width, canvas.height);
 				drawBall();
+				drawPaddle();
 				if (ball_y + dy < ballRadius || ball_y + dy > canvas.height - ballRadius) {
 					dy = -dy;
 				}
