--- a/Breakout.html
+++ b/Breakout.html
@@ -78,12 +78,22 @@
 				drawPaddle();
 
 				// 跳ね返りの判定
-				if (ball_y + dy < ballRadius || ball_y + dy > canvas.height - ballRadius) {
+				if (ball_y + dy < ballRadius) {
 					dy = -dy;
+				} else if (ball_y + dy > canvas.height - ballRadius) {
+					if(ball_x > paddleX && ball_x < paddleX + paddleWidth) {
+						dy = -dy;
+					} else {
+						alert("GAME OVER!!!!");
+						document.location.reload();
+						clearInterval(interval); // Needed for chrome to end game
+					}
 				}
+
 				if (ball_x + dx < ballRadius || ball_x + dx > canvas.width - ballRadius) {
 					dx = -dx
 				}
+
 				ball_x += dx;
 				ball_y += dy;
 
@@ -103,7 +113,7 @@
 			// ボタンが離れたときに発火
 			document.addEventListener("keyup", UpKey, false);
 			// draw関数が10msごとに実行される
-			setInterval(draw, 10);
+			var interval = setInterval(draw, 10);
 		</script>
 	</body>
 </html>
